--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package.json .
 
 RUN npm install
-RUN [ "npm", "install", "-g", "typescript" ]
+RUN [ "npm", "install", "-g", "typescript", "nodemon", "ts-node" ]
 
 FROM node:18.13.0 AS build
 
@@ -15,4 +15,4 @@ COPY . .
 
 COPY --from=dependencies /app/node_modules /app/node_modules
 
-CMD [ "npm", "run", "build-docker" ]
+CMD [ "bash", "./docker-start.sh" ]
