--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "docker-dev": "nodemon --exec bash ./build-docker.sh"
+    "docker-dev": "nodemon -e ts,tsx,html --exec bash ./build-docker.sh"
   },
   "keywords": [],
   "author": "",
