through process of elimination, I have eliminated the bugs

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18.13.0
+RUN useradd -ms /bin/sh -u 1001 app
 
-COPY . /app
+COPY --chown=app:app . /app
 
 WORKDIR /app
 
@@ -8,5 +9,7 @@ RUN npm install
 RUN [ "npm", "install", "-g", "typescript", "nodemon", "ts-node" ]
 
 EXPOSE 8797
+
+USER app
 
 CMD [ "bash", "./docker-start.sh" ]
