--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,11 +7,12 @@ COPY package.json .
 RUN npm install
 RUN [ "npm", "install", "-g", "typescript", "nodemon", "ts-node" ]
 
-FROM node:18.13.0 AS build
+FROM node:18.13.0 AS build 
+USER root
 
 WORKDIR /app
 
-COPY . .
+COPY --chown=root:root . .
 
 COPY --from=dependencies /app/node_modules /app/node_modules
 
